// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow overriding flags  1`] = `
{
  "stderr": "",
  "write": [],
}
`;

exports[`boolean flags do not swallow the next argument  1`] = `
{
  "stderr": "",
  "stdout": "console.log('could be single quote and without semi');",
  "write": [],
}
`;

exports[`negated options work  1`] = `
{
  "stderr": "",
  "stdout": "console.log("could be single quote and without semi")",
  "write": [],
}
`;

exports[`number file/dir  1`] = `
{
  "stdout": "1/file-in-dir-named-1.js",
}
`;

exports[`number file/dir  2`] = `
{
  "stdout": "2.2/file-in-dir-named-2.2.js",
}
`;

exports[`number file/dir  3`] = `
{
  "stdout": "3",
}
`;

exports[`number file/dir  4`] = `
{
  "stdout": "4.44",
}
`;

exports[`number file/dir  5`] = `
{
  "stdout": "1/file-in-dir-named-1.js
2.2/file-in-dir-named-2.2.js
3
4.44",
}
`;

exports[`unknown negated options are errored  1`] = `
{
  "stderr": "
  Unknown option: "unknown"
",
  "stdout": "",
  "write": [],
}
`;

exports[`unknown options are errored  1`] = `
{
  "stderr": "
  Unknown option: "unknown"
",
  "stdout": "",
  "write": [],
}
`;

exports[`unknown options may trigger a suggestion \`_\`  1`] = `
{
  "stderr": "
  Unknown option: "a". Did you mean "v"?
",
  "stdout": "",
}
`;
